--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -38,7 +38,7 @@
     <string name="settings_server">Zerbitzaria</string>
     <string name="settings_url">Zerbitzariaren helbidea</string>
     <string name="settings_url_check_description">Erakusten du ea helbideari ping egin daiteken</string>
-    <string name="settings_url_warn_http">ERNE: \"http\" ez da segurua. Mesedez, erabili \"https\".</string>
+    <string name="settings_url_warn_http">ERNE: "http" ez da segurua. Mesedez, erabili "https".</string>
     <string name="settings_username">Erabiltzaile izena</string>
     <string name="settings_password">Pasahitza</string>
     <string name="settings_password_check_description">Erakusten du kredentzialak zuzenak diren.</string>
@@ -74,16 +74,16 @@
     <string name="about_translators">pejakm (Serbia), ageru (Frantzesa (Frantzia)), proninyaroslav (Errusiera), mist (Txekiera)</string>
     <string name="about_testers_title">Frogatzaileak</string>
     <string name="about_source_title">Iturburu-kodea</string>
-    <string name="about_source">Proiektu hau GitHub-en ostatatuta dago: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Proiektu hau GitHub-en ostatatuta dago: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
     <string name="about_issues_title">Arazoak</string>
-    <string name="about_issues">GitHub-en akatsak salatu, hobekuntzak proposatu eta ezaugarri berriak eskatu ditzakezu hurrengo harian: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">GitHub-en akatsak salatu, hobekuntzak proposatu eta ezaugarri berriak eskatu ditzakezu hurrengo harian: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">Aplikazio lizentzia</string>
     <string name="about_app_license">Aplikazio hau GNU GENERAL PUBLIC LICENSE v3+ lizentziapean dago.</string>
     <string name="about_app_license_button">Lizentzia ikusi</string>
     <string name="about_app_icon_disclaimer_title">Aplikazio irudia</string>
-    <string name="about_app_icon_disclaimer"><p>Jatorrizko irudia<a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> -ek egin du <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a>-tik</p></string>
+    <string name="about_app_icon_disclaimer"><p>Jatorrizko irudia<a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> -ek egin du <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a>-tik</p></string>
     <string name="about_icons_disclaimer_title">Irudiak</string>
-    <string name="about_icons_disclaimer"><p>Aplikazio honetan erabilitako beste irudi gustiak <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Material Design Irudiak</a> dira, Google Inc.-ek eginak eta Creative Commons Lizentziapean.</p></string>
+    <string name="about_icons_disclaimer"><p>Aplikazio honetan erabilitako beste irudi gustiak <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Irudiak</a> dira, Google Inc.-ek eginak eta Creative Commons Lizentziapean.</p></string>
 
     <string name="about_credits_tab_title">Kredituak</string>
     <string name="about_contribution_tab_title">Kontribuzio</string>
