--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -38,7 +38,7 @@
     <string name="settings_server">Serveris</string>
     <string name="settings_url">Servera adrese</string>
     <string name="settings_url_check_description">Parāda, ja adresi var nopingot.</string>
-    <string name="settings_url_warn_http">BRĪDINĀJUMS: \"http\" ir nedrošs, lietojiet \"https\" !!!</string>
+    <string name="settings_url_warn_http">BRĪDINĀJUMS: "http" ir nedrošs, lietojiet "https" !!!</string>
     <string name="settings_username">Lietotājvārds</string>
     <string name="settings_password">Parole</string>
     <string name="settings_password_check_description">Rāda, vai akreditācijas dati ir pareizi.</string>
@@ -71,12 +71,12 @@
     <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testētāji</string>
     <string name="about_source_title">Izejas kods</string>
-    <string name="about_source">Šis projekts atrodas uz GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Šis projekts atrodas uz GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
     <string name="about_app_license_title">Programmas licence</string>
     <string name="about_app_license">Šī lietojumprogramma tiek licencēta zem GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Skatīt licenci</string>
     <string name="about_app_icon_disclaimer_title">Programmas ikona</string>
-    <string name="about_app_icon_disclaimer"><p>Orģinālās ikonas izveodojis <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> no <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
+    <string name="about_app_icon_disclaimer"><p>Orģinālās ikonas izveodojis <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> no <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikonas</string>
     <string name="about_credits_tab_title">Kredīti</string>
     <string name="about_license_tab_title">Licence</string>
