--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -38,7 +38,7 @@
     <string name="settings_server">Tjener</string>
     <string name="settings_url">Tjeneradresse</string>
     <string name="settings_url_check_description">Vises hvis adressen kan pinges.</string>
-    <string name="settings_url_warn_http">ADVARSEL: \"http\" er usikker. Vennligst bruk \"https\".</string>
+    <string name="settings_url_warn_http">ADVARSEL: "http" er usikker. Vennligst bruk "https".</string>
     <string name="settings_username">Brukernavn</string>
     <string name="settings_password">Passord</string>
     <string name="settings_password_check_description">Vis hvis påloggingsinformasjon er riktig.</string>
@@ -74,16 +74,16 @@
     <string name="about_translators">Sølve_Salvesen (norsk bokmål)</string>
     <string name="about_testers_title">Testere</string>
     <string name="about_source_title">Kildekode</string>
-    <string name="about_source">Dette prosjektet ligger på GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Dette prosjektet ligger på GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
     <string name="about_issues_title">Feil</string>
-    <string name="about_issues">Du kan rapportere feil, forbedringforslag og funksjonønsker på GitHub saksporeren: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Du kan rapportere feil, forbedringforslag og funksjonønsker på GitHub saksporeren: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">Lisens</string>
     <string name="about_app_license">Dette programmet er lisensiert under GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Vis lisens</string>
     <string name="about_app_icon_disclaimer_title">App ikon</string>
-    <string name="about_app_icon_disclaimer"><p>Orginalt ikon laget av <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> fra <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
+    <string name="about_app_icon_disclaimer"><p>Orginalt ikon laget av <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> fra <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikoner</string>
-    <string name="about_icons_disclaimer"><p>Alle andre ikoner brukt av denne app\'en er <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Material Design Icons</a> laget av Google Inc. og lisensiert under Creative Commons License.</p></string>
+    <string name="about_icons_disclaimer"><p>Alle andre ikoner brukt av denne app\'en er <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> laget av Google Inc. og lisensiert under Creative Commons License.</p></string>
 
     <string name="about_contribution_tab_title">Bidragsytere</string>
     <string name="about_license_tab_title">Lisens</string>
