--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -38,7 +38,7 @@
     <string name="settings_server">Serwer</string>
     <string name="settings_url">Adres serwera</string>
     <string name="settings_url_check_description">Pokazuje czy adres może zostać pingnięty.</string>
-    <string name="settings_url_warn_http">OSTRZEŻENIE: \"http\" nie jest bezpieczne. Proszę użyć \"https\".</string>
+    <string name="settings_url_warn_http">OSTRZEŻENIE: "http" nie jest bezpieczne. Proszę użyć "https".</string>
     <string name="settings_username">Nazwa użytkownika</string>
     <string name="settings_password">Hasło</string>
     <string name="settings_password_check_description">Pokazuje czy dane dostępowe są poprawne.</string>
@@ -74,16 +74,16 @@
     <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testerzy</string>
     <string name="about_source_title">Kod źródłowy</string>
-    <string name="about_source">Ten projekt jest hostowany na GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Ten projekt jest hostowany na GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
     <string name="about_issues_title">Problemy</string>
-    <string name="about_issues">Możesz zgłaszać błędy, propozycje rozbudowy lub prośby o nowe funkcjonalności na GitHubie: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Możesz zgłaszać błędy, propozycje rozbudowy lub prośby o nowe funkcjonalności na GitHubie: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">Licencja aplikacji</string>
     <string name="about_app_license">Aplikacja jest chroniona licencją GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Zobacz licencję</string>
     <string name="about_app_icon_disclaimer_title">Ikona aplikacji</string>
-    <string name="about_app_icon_disclaimer"><p>Oryginalna ikona została wykonana przez <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jana C. Borchardta</a> z <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
+    <string name="about_app_icon_disclaimer"><p>Oryginalna ikona została wykonana przez <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jana C. Borchardta</a> z <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikony</string>
-    <string name="about_icons_disclaimer"><p>Pozostałe ikony użyte w aplikacji są <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Ikonami Material Design</a> wykonanymi przez Google Inc. i są chronione licencją Creative Commons License.</p></string>
+    <string name="about_icons_disclaimer"><p>Pozostałe ikony użyte w aplikacji są <a href="https://materialdesignicons.com/" title="Link to Website">Ikonami Material Design</a> wykonanymi przez Google Inc. i są chronione licencją Creative Commons License.</p></string>
 
     <string name="about_credits_tab_title">O</string>
     <string name="about_contribution_tab_title">Wkład</string>
